--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,4 +4,5 @@ kramdown:
     math_engine: mathjax
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
+- jekyll-github-metadata
 - jekyll-remote-theme
